# aoc-2015

./: .flake8  .gitignore  README.md  index.html  make_pycco_pages.py  mypy.ini  noxfile.html  noxfile.py  pyproject.toml
.github/workflows/: main.yml
day1/: main.html  main.py
day2/: main.html  main.py
day_template/: input.txt  main.py
src/day1/: __init__.html  main.html  main.py
src/day2/: main.html  main.py
src/day3/: main.html  main.py
src/day4/: main.html  main.py
src/day5/: main.html  main.py
src/day6/: main.html  main.py
src/day7/: main.html  main.py
src/day8/: main.html  main.py
