[tool.poetry]
name = "aoc-2015"
version = "0.1.0"
description = ""
authors = ["Peter Curtis <peter.d.curtis@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2015"}]

[tool.poetry.dependencies]
python = "^3.10"
Pycco = "^0.6.0"
pytest = "^7.1.3"
mypy = "^0.982"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
